--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,12 @@
         "psr-4": { "Hal\\UI\\": "src" }
     },
 
+    "scripts": {
+        "sniff": "phpcs --colors --runtime-set ignore_warnings_on_exit true src",
+        "analyze": "phpstan analyse --configuration=phpstan.neon -l 5 src",
+        "lint": "vendor/bin/phplint --no-cache --ansi src"
+    },
+
     "require": {
         "php-64bit": "~7.1",
 
@@ -39,11 +45,11 @@
         "predis/predis":            "~1.0",
         "psr/log":                  "*",
 
-        "hal/hal-core":             "dev-deps",
+        "hal/hal-core":             "dev-master",
 
         "ql/mcp-common":            "~2.0",
         "ql/mcp-logger":            "~4.0",
-        "ql/mcp-panthor":           "dev-next",
+        "ql/mcp-panthor":           "~3.3",
 
         "slim/slim":                "~3.7",
 
@@ -68,6 +74,7 @@
 
         "overtrue/phplint":          "~1.0",
         "phpstan/phpstan":           "~0.9",
+        "slevomat/coding-standard":  "~4.0",
         "squizlabs/php_codesniffer": "~3.0",
 
         "codedungeon/phpunit-result-printer": "~0.5",
