Hold on to ye olde buttes

--- a/config/.env.default
+++ b/config/.env.default
@@ -21,7 +21,7 @@ HAL_ORM_CONFIG_DIR="${HAL_ROOT}/vendor/hal/hal-core/config/doctrine"
 # (memory, redis)
 HAL_ORM_CACHE='memory'
 
-#
+# panthor / hal
 HAL_LOG_STACKTRACES_ON='1'
 HAL_DI_DISABLE_CACHE_ON='1'
 
