--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,18 @@
     },
 
     "scripts": {
+        "analyze": "phpstan analyse --configuration=phpstan.neon -l 4 src",
+        "lint": "vendor/bin/phplint --no-cache --ansi src",
         "sniff": "phpcs --runtime-set ignore_warnings_on_exit true",
         "sniff-nowarn": "phpcs -n",
-        "analyze": "phpstan analyse --configuration=phpstan.neon -l 4 src",
-        "lint": "vendor/bin/phplint --no-cache --ansi src"
+        "test": "phpunit",
+
+        "build": [
+            "@lint",
+            "@sniff",
+            "@analyze",
+            "@test"
+        ]
     },
 
     "require": {
