--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,7 +84,7 @@ jobs:
 
             - run:
                 name: 'Install node dependencies'
-                command: 'yarn install'
+                command: 'yarn install --production'
 
             - save_cache:
                 key: 'v1-npm-deps-{{ checksum "yarn.lock" }}'
