--- a/docker/conf/.env.docker
+++ b/docker/conf/.env.docker
@@ -1,29 +1,27 @@
 # hal
 ENVIRONMENT='dev'
-HAL_ROOT="$(pwd)"
+HAL_ROOT="{{root_path}}"
 
-HAL_APPLICATION_ID='123456'
-HAL_BASEURL='http://hal.local'
-HAL_ADMIN_EMAIL="admin@example.com"
+HAL_BASEURL='{{base_url}}'
 
 # db
-HAL_DB_USER='hal'
-HAL_DB_PASSWORD=''
-HAL_DB_HOST='localhost'
-HAL_DB_PORT='5432'
-HAL_DB_NAME='hal'
-HAL_DB_DRIVER='pdo_pgsql'
+HAL_DB_USER='{{database_username}}'
+HAL_DB_PASSWORD='{{database_password}}'
+HAL_DB_HOST='{{database_host}}'
+HAL_DB_PORT='{{database_port}}'
+HAL_DB_NAME='{{database_name}}'
+HAL_DB_DRIVER='pdo_{{database_driver}}'
 
 # hal core
 HAL_ORM_DEVMODE_ON='false'
 HAL_ORM_PROXY_DIR="${HAL_ROOT}/.doctrine"
 HAL_ORM_CONFIG_DIR="${HAL_ROOT}/vendor/hal/hal-core/config/doctrine"
 # (memory, redis)
-HAL_ORM_CACHE='memory'
+HAL_ORM_CACHE='redis'
 
 # panthor / hal
 HAL_LOG_STACKTRACES_ON='1'
-HAL_DI_DISABLE_CACHE_ON='1'
+HAL_DI_DISABLE_CACHE_ON='0'
 
 # panthor
 PANTHOR_APPROOT="${HAL_ROOT}"
@@ -31,10 +29,6 @@ PANTHOR_TIMEZONE='America/Detroit'
 PANTHOR_ROUTES_DISABLE_CACHE_ON='false'
 PANTHOR_DEBUG='false'
 PANTHOR_TWIG_DEBUG='false'
-
-# aws
-HAL_AWS_CREDENTIALS_USE_HOST=''
-HAL_AWS_HOST_CREDENTIALS_PATH=''
 
 # mcp logger
 MCP_LOGGER_SERVICE='error_log'
@@ -61,13 +55,13 @@ HAL_LDAP_DOMAIN='HAL'
 HAL_LDAP_BASE_DN='dc=hal,dc=corp'
 
 # cache
-HAL_REDIS_SERVER='localhost:6379'
+HAL_REDIS_SERVER='{{redis_host}}:6379'
 HAL_REDIS_PREFIX="hal_${ENVIRONMENT}"
 
 # (memory, redis)
-HAL_CACHE_API='memory'
-HAL_CACHE_MAIN='memory'
-HAL_CACHE_GITHUB='memory'
+HAL_CACHE_API='redis'
+HAL_CACHE_MAIN='redis'
+HAL_CACHE_GITHUB='redis'
 
 # encryption
 HAL_CRYPTO_SECRETPATH="${HAL_ROOT}/config/dev.encrypter.secret"
