--- a/docker/conf/.env.docker
+++ b/docker/conf/.env.docker
@@ -2,7 +2,7 @@
 ENVIRONMENT='dev'
 HAL_ROOT="{{root_path}}"
 
-HAL_BASEURL='{{base_url}}'
+HAL_BASEURL='{{app_url}}'
 
 # db
 HAL_DB_USER='{{database_username}}'
@@ -29,19 +29,20 @@ PANTHOR_TIMEZONE='America/Detroit'
 PANTHOR_ROUTES_DISABLE_CACHE_ON='false'
 PANTHOR_DEBUG='false'
 PANTHOR_TWIG_DEBUG='false'
+PANTHOR_COOKIE_SECRET='{{app_secret}}'
 
 # mcp logger
 MCP_LOGGER_SERVICE='error_log'
 MCP_LOGGER_SERIALIZER='line'
 MCP_LOGGER_NEWLINES_ENABLED="SPLIT_ON_NEWLINES"
 MCP_LOGGER_LINE_SERIALIZER_NEWLINES_ENABLED="ALLOW_NEWLINES"
-MCP_LOGGER_ERRORLOG_TYPE='FILE'
-MCP_LOGGER_ERRORLOG_FILE="${HAL_ROOT}/.error.log"
+MCP_LOGGER_ERRORLOG_TYPE='SAPI'
+MCP_LOGGER_ERRORLOG_FILE=''
 MCP_LOGGER_LINE_SERIALIZER_TEMPLATE="
 >>> [{{ shortid }}] --------------------------------------------------------------------------------
 >>> [{{ shortid }}] {{ severity }} : {{ message }}
 >>> [{{ shortid }}] --------------------------------------------------------------------------------
-{{ details }}
+{{ context.errorstacktrace }}
 "
 
 # application
